<resources>
    <string name="app_name">Game_2048</string>
    <string name="button_exit">Выход</string>
    <string name="button_start">Начать игру</string>
    <string name="button_help">Справка</string>
    <string name="button_settings">Параметры</string>
    <string name="title_2048">2048</string>
    <string name="record">Рекорд</string>
    <string name="textview">TextView</string>
    <string name="score">Счет</string>
    <string name="_2_90_4_10_11_4_2_4_4_4_4_8_4_4_8">В каждом раунде появляется плитка номинала «2» или «4». Нажатием стрелки игрок может скинуть все плитки игрового поля в одну из 4 сторон. Если при сбрасывании две плитки одного номинала «налетают» одна на другую, то они превращаются в одну, номинал которой равен сумме соединившихся плиток. После каждого хода на свободной секции поля появляется новая плитка номиналом «2» или «4». Если при нажатии кнопки местоположение плиток или их номинал не изменится, то ход не совершается. Если в одной строчке или в одном столбце находится более двух плиток одного номинала, то при сбрасывании они начинают соединяться с той стороны, в которую были направлены. Данная обработка неоднозначности позволяет более точно формировать стратегию игры. За каждое соединение игровые очки увеличиваются на номинал получившейся плитки. Игра заканчивается поражением, если после очередного хода невозможно совершить действие.</string>
    <string name="rules">Правила игры</string>
    <string name="author">Создатель : S3RFer \n kostya.ficyn@gmail.com</string>
    <string name="reset_bd">сбросить рекорд</string>
</resources>