<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nomad"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/settings"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:rotationX="20"
        android:text="@string/button_settings"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <Button
        android:id="@+id/start"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:rotationX="20"
        android:text="@string/button_start"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_main" />

    <Button
        android:id="@+id/exit"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:rotationX="20"
        android:text="@string/button_exit"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help" />

    <Button
        android:id="@+id/help"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:rotationX="20"
        android:text="@string/button_help"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <TextView
        android:id="@+id/title_main"
        android:layout_width="318dp"
        android:layout_height="97dp"
        android:layout_marginTop="70dp"
        android:background="@color/bizarre"
        android:rotation="0"
        android:rotationX="17"
        android:text="@string/title_2048"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>