<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="389dp"
        android:layout_height="540dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/comic_neue"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/_2_90_4_10_11_4_2_4_4_4_4_8_4_4_8"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="410dp"
        android:layout_height="36dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comic_neue"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/rules"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="436dp"
        android:layout_height="97dp"
        android:background="@color/bizarre"
        android:rotation="0"
        android:rotationX="0"
        android:text="@string/title_2048"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="408dp"
        android:layout_height="53dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/comic_neue"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/author"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>