<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nomad"
    tools:context=".Game">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:background="@color/bizarre"
        android:rotation="0"
        android:rotationX="0"
        android:text="@string/title_2048"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="202dp"
        android:layout_height="117dp"
        android:layout_marginTop="120dp"
        android:background="@color/bizarre"
        android:orientation="vertical"
        app:flow_horizontalAlign="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:background="@drawable/textview_border"
            android:text="@string/record"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="212dp" />

        <TextView
            android:id="@+id/record_number"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="@drawable/textview_border"
            android:fontFamily="@font/comic_neue"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layotScore"
        android:layout_width="202dp"
        android:layout_height="117dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="120dp"
        android:background="@color/bizarre"
        android:orientation="vertical"
        app:flow_horizontalAlign="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/textview_border"
            android:gravity="center_horizontal"
            android:text="@string/score"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="124dp" />

        <TextView
            android:id="@+id/score_number"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="@drawable/textview_border"
            android:fontFamily="@font/comic_neue"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="212dp"
        android:background="@color/pablo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:fontFamily="@font/comic_neue"
        android:textStyle="bold"
        android:useDefaultMargins="true">
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>